# spherical-tiling-3d

./: .gitignore  README.md  pyproject.toml
examples/: example_tiled_sphere_colored.py  example_tiled_sphere_compound.py  example_tiled_sphere_frame.py  export_colored_platonics.py  platonics_stl.py
src/spherical_tiling_3d/: __init__.py  geometry.py  polyhedron_cadquery.py  tiled_sphere.py  wythoff.py
tests/: test_wythoff.py
